--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin:0;
+  font-family:'Quicksand';
+  color:black;
+}
+.Navbar{
+  padding: 20px;
+  margin: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+.Navbar h1{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', 'Arial',' sans-serif';
+  justify-content: flex-start;
+  color: pink;
+}
+.Navbar.Links{
+  margin-left: auto;
+}
+.App{
+  display: inline-flex ;
+  justify-content: flex-end;
+  flex-direction: row;
+}
+.Content{
+  padding : 10px 5px;
 }
